[gd_scene load_steps=9 format=3 uid="uid://daspbr1sqqe1j"]

[ext_resource type="Script" path="res://scenes/gui/gui.gd" id="1"]
[ext_resource type="PackedScene" uid="uid://ccfrwka38gfbp" path="res://scenes/gui/screens/start_screen.tscn" id="2"]
[ext_resource type="PackedScene" uid="uid://7kd4b0i1w7yt" path="res://scenes/gui/screens/playing_screen.tscn" id="3"]
[ext_resource type="PackedScene" uid="uid://bf4evcyg8hb57" path="res://scenes/gui/screens/game_over_screen.tscn" id="4"]
[ext_resource type="AudioStream" uid="uid://b17nlcllmsmu5" path="res://sounds/swoosh.wav" id="5"]

[sub_resource type="Animation" id="1"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("ColorRect:self_modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(0, 0, 0, 0)]
}

[sub_resource type="Animation" id="2"]
resource_name = "transition"
length = 0.2
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("ColorRect:self_modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.2),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(0, 0, 0, 0), Color(0, 0, 0, 1)]
}

[sub_resource type="AnimationLibrary" id="3"]
_data = {
"RESET": SubResource("1"),
"transition": SubResource("2")
}

[node name="GUI" type="CanvasLayer"]
layer = 10
script = ExtResource("1")

[node name="StartScreen" parent="." instance=ExtResource("2")]

[node name="PlayingScreen" parent="." instance=ExtResource("3")]

[node name="GameOverScreen" parent="." instance=ExtResource("4")]

[node name="Transition" type="CanvasLayer" parent="."]
layer = 10

[node name="ColorRect" type="ColorRect" parent="Transition"]
self_modulate = Color(0, 0, 0, 0)
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2

[node name="AnimationPlayer" type="AnimationPlayer" parent="Transition"]
libraries = {
"": SubResource("3")
}

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="Transition"]
stream = ExtResource("5")
max_polyphony = 2
